# raw-struct

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
examples/dyn_memory/: Cargo.toml
examples/dyn_memory/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
raw_struct/: Cargo.toml
raw_struct/src/: copy.rs  error.rs  lib.rs  memory.rs  reference.rs  view.rs  x.rs
raw_struct/src/builtins/: array.rs  mod.rs  ptr.rs
raw_struct/tests/: attr.rs  custom_resolver.rs  fn_offset.rs  inheritance.rs  inline.rs  inline.rs.dis  memory_deref.rs  metadata.rs  raw_dummy.rs  read.rs  typed.rs
raw_struct_derive/: Cargo.toml
raw_struct_derive/src/: derive_raw_struct.rs  lib.rs
