[workspace]
resolver = "2"
members = [
    "raw_struct",
    "raw_struct_derive",
    "examples/minimal",
    "examples/dyn_memory",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Markus Hadenfeldt <mhadenfeldt@did.science>"]
description = "raw_struct is a Rust procedural macro for easily declaring C-style structs that reference local or external memory, based on your memory implementation. It generates appropiate getter methods for easy access."
repository = "https://github.com/WolverinDEV/lazy-link"
license-file = "LICENSE"
