[package]
name = "raw_struct"
publish = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
readme = "../README.MD"

[dependencies]
raw_struct_derive = { version = "0.3.0", path = "../raw_struct_derive" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
